[package]
name = "satif-kissat"
version = "0.4.9"
edition = "2024"
license = "MIT"
description = "Rust wrapper for the kissat SAT solver"
repository = "https://github.com/gipsyh/kissat-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]

[dependencies]
logic-form = { path = "../logic-form", version = "0.4.0" }
satif = { path = "../satif", version = "0.2.0" }

[build-dependencies]
giputils = { path = "../giputils", version = "0.3.0" }
