[package]
name = "satif-kissat"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "Rust wrapper for the kissat SAT solver"
repository = "https://github.com/gipsyh/kissat-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]

[dependencies]
logicrs = { path = "../logicrs", version = "0.5.0" }

[build-dependencies]
giputils = { path = "../giputils", version = "0.3.3" }
